--- a/MyLinx/MyLinx/App.xaml
+++ b/MyLinx/MyLinx/App.xaml
@@ -2,8 +2,20 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MyLinx"
-             StartupUri="MainWindow.xaml">
+             StartupUri="/View/MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+
+            <ResourceDictionary.MergedDictionaries>
+
+                <ResourceDictionary Source="/View/Styles/Button.xaml" />
+                <ResourceDictionary Source="/View/Styles/Images.xaml" />
+                <ResourceDictionary Source="/View/Styles/Page.xaml" />
+                <ResourceDictionary Source="/View/Styles/Text.xaml" />
+                <ResourceDictionary Source="/Tools/DataTemplate.xaml" />
+
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+
     </Application.Resources>
 </Application>
