--- a/MyLinx/MyLinx/View/MainWindow.xaml
+++ b/MyLinx/MyLinx/View/MainWindow.xaml
@@ -1,13 +1,77 @@
-﻿<UserControl x:Class="MyLinx.MainWindow"
+﻿<Window x:Class="MyLinx.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MyLinx"
+        xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
         mc:Ignorable="d"
-        Style="{StaticResource PageStyle}" Height="450" Width="800"
+        Height="680" Width="1080"
+        Title="MyLinx"
+        WindowStartupLocation="CenterScreen"
+        Background="Transparent"
+        AllowsTransparency="True"
+        WindowStyle="None"
+        ResizeMode="NoResize"
         >
-    <Grid>
-        <Button ></Button>
-    </Grid>
-</UserControl>
+    <Border Background="{StaticResource Reseda}" CornerRadius="20">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="250"></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="60"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <TextBlock Text="MyLinx"
+                       FontSize="30"
+                       Style="{StaticResource TextStyle}"
+                       Margin="20,0,0,0"
+                       />
+
+            <StackPanel Grid.Row="1">
+                <RadioButton
+                             Height="50"
+                             Style="{StaticResource Radiobtn}"
+                    >
+                    <Grid>
+                    <iconPacks:PackIconMaterial Kind="SunAngle" Style="{StaticResource ImageStyle}"/>
+                    <TextBlock Text="Home" Style="{StaticResource RadioButtonText}">
+                    </TextBlock>
+                    </Grid>
+                </RadioButton>
+                <RadioButton
+                             Height="50"
+                             Style="{StaticResource Radiobtn}"
+                    >
+                    <Grid>
+                        <iconPacks:PackIconMaterial Kind="SunAngle" Style="{StaticResource ImageStyle}"/>
+                        <TextBlock Text="Macros" Style="{StaticResource RadioButtonText}">
+                        </TextBlock>
+                    </Grid>
+                </RadioButton>
+                <RadioButton
+                             Height="50"
+                             Style="{StaticResource Radiobtn}"
+                    >
+                    <Grid>
+                        <iconPacks:PackIconMaterial Kind="SunAngle" Style="{StaticResource ImageStyle}"/>
+                        <TextBlock Text="Home" Style="{StaticResource RadioButtonText}">
+                        </TextBlock>
+                    </Grid>
+                </RadioButton>
+                <RadioButton
+                             Height="50"
+                             Style="{StaticResource Radiobtn}"
+                    >
+                    <Grid>
+                        <iconPacks:PackIconMaterial Kind="SunAngle" Style="{StaticResource ImageStyle}"/>
+                        <TextBlock Text="Home" Style="{StaticResource RadioButtonText}">
+                        </TextBlock>
+                    </Grid>
+                </RadioButton>
+            </StackPanel>
+        </Grid>
+        
+    </Border>
+</Window>
