--- a/MyLinx/MyLinx/View/Styles/Images.xaml
+++ b/MyLinx/MyLinx/View/Styles/Images.xaml
@@ -9,7 +9,7 @@
         <Setter Property="Height" Value="30" />
         <Setter Property="Width" Value="30" />
         <Setter Property="Margin" Value="20,0,0,0" />
-        <Setter Property="Foreground" Value="PeachPuff" />
+        <Setter Property="Foreground" Value="{StaticResource Sage}" />
     </Style>
 
 </ResourceDictionary>
