--- a/MyLinx/MyLinx/View/Styles/Text.xaml
+++ b/MyLinx/MyLinx/View/Styles/Text.xaml
@@ -6,18 +6,28 @@
 
     <Style x:Key="TextStyle" TargetType="TextBlock" x:Name="fortext">
 
-        <Setter Property="FontFamily" Value="/View/Resource/Fonts/#Mariupol" />
+        <Setter Property="FontFamily" Value="/View/Fonts/#Comic Sans MS" />
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="HorizontalAlignment" Value="Left" />
-        <Setter Property="Foreground" Value="PeachPuff" />
+        <Setter Property="Foreground" Value="{StaticResource Sage}" />
         <Setter Property="FontSize" Value="18" />
         <Setter Property="Margin" Value="70,0,0,0" />
 
     </Style>
 
+    <Style x:Key="RadioButtonText" TargetType="TextBlock">
+        <Setter Property="FontFamily" Value="/View/Fonts/#Comic Sans MS"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="Margin" Value="55,0,0,0"/>
+        <Setter Property="Foreground" Value="{StaticResource Sage}"/>
+        <Setter Property="FontSize" Value="25"/>
+
+    </Style>
+
     <Style x:Key="DefTextStyle" TargetType="TextBlock">
 
-        <Setter Property="FontFamily" Value="/View/Resource/Fonts/#Mariupol" />
+        <Setter Property="FontFamily" Value="/View/Fonts/#Comic Sans MS" />
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="HorizontalAlignment" Value="Left" />
         <Setter Property="Foreground" Value="White" />
@@ -27,36 +37,36 @@
 
     <Style x:Key="TextBoxStyle" TargetType="TextBox">
         <Setter Property="Background" Value="Transparent" />
-        <Setter Property="FontFamily" Value="/View/Resource/Fonts/#Mariupol" />
+        <Setter Property="FontFamily" Value="/View/Fonts/#Comic Sans MS" />
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="FontSize" Value="16"/>
-        <Setter Property="Foreground" Value="PeachPuff" />
+        <Setter Property="Foreground" Value="{StaticResource Sage}" />
         <Setter Property="Margin" Value="0,0,0,0" />
         <Setter Property="Padding" Value="4,0,0,0" />
         <Setter Property="BorderThickness" Value="1" />
-        <Setter Property="BorderBrush" Value="PeachPuff" />
+        <Setter Property="BorderBrush" Value="{StaticResource Sage}" />
         <Setter Property="SelectionBrush" Value="Gray" />
 
     </Style>
 
     <Style x:Key="PassBoxStyle" TargetType="PasswordBox">
         <Setter Property="Background" Value="Transparent" />
-        <Setter Property="FontFamily" Value="/View/Resource/Fonts/#Mariupol" />
+        <Setter Property="FontFamily" Value="/View/Fonts/#Comic Sans MS" />
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="FontSize" Value="16"/>
-        <Setter Property="Foreground" Value="PeachPuff" />
+        <Setter Property="Foreground" Value="{StaticResource Sage}" />
         <Setter Property="Margin" Value="0,0,0,0" />
         <Setter Property="Padding" Value="4,0,0,0" />
         <Setter Property="BorderThickness" Value="1" />
-        <Setter Property="BorderBrush" Value="PeachPuff" />
+        <Setter Property="BorderBrush" Value="{StaticResource Sage}" />
 
     </Style>
 
     <Style x:Key="TextStyleText" TargetType="TextBlock">
-        <Setter Property="FontFamily" Value="/View/Resource/Fonts/#Mariupol" />
+        <Setter Property="FontFamily" Value="/View/Fonts/#Comic Sans MS" />
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="HorizontalAlignment" Value="Left" />
-        <Setter Property="Foreground" Value="PeachPuff" />
+        <Setter Property="Foreground" Value="{StaticResource Sage}" />
         <Setter Property="FontSize" Value="18" />
 
     </Style>
