--- a/MyLinx/MyLinx/View/Styles/Text.xaml
+++ b/MyLinx/MyLinx/View/Styles/Text.xaml
@@ -48,7 +48,30 @@
         <Setter Property="SelectionBrush" Value="Gray" />
 
     </Style>
+    <Style x:Key="SearchBoxStyle" TargetType="TextBox">
+        <Setter Property="Background" Value="AliceBlue" />
+        <Setter Property="FontFamily" Value="/View/Fonts/#Comic Sans MS" />
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="Foreground" Value="{StaticResource Roze}" />
+        <Setter Property="Margin" Value="0,0,0,0" />
+        <Setter Property="Padding" Value="4,0,0,0" />
+        <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="BorderBrush" Value="{StaticResource Roze}" />
+        <Setter Property="SelectionBrush" Value="Gray" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="TextBox">
+                    <Border x:Name="TextBorder" Background="{TemplateBinding Background}" CornerRadius="8 0 0 8">
+                        <ScrollViewer x:Name="PART_ContentHost" Margin="{TemplateBinding Padding}" />
+                    </Border>                    
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 
+    
+    
     <Style x:Key="PassBoxStyle" TargetType="PasswordBox">
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="FontFamily" Value="/View/Fonts/#Comic Sans MS" />
@@ -76,9 +99,12 @@
         <Setter Property="IsHitTestVisible" Value="False" />
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="Margin" Value="5,0,0,0" />
+        <Setter Property="FontFamily" Value="/View/Fonts/#Comic Sans MS"/>
+        <Setter Property="FontSize" Value="20"/>
     </Style>
 
 
+    
 </ResourceDictionary>
 
 
