--- a/MyLinx/MyLinx/View/MainWindow.xaml
+++ b/MyLinx/MyLinx/View/MainWindow.xaml
@@ -45,18 +45,16 @@
                        />
             <StackPanel Grid.Column="1" Height="35" Width="120" VerticalAlignment="Center" HorizontalAlignment="Right" Margin ="0,0,10,0 ">
                 <Grid Height="35" Width="35" HorizontalAlignment="Right" Margin="0,0,0,0">
-                    <Border Style="{StaticResource BorderButtonStyle}">
-                        <Button Style="{StaticResource ButtonSimp1}" Background="Transparent" Command="{Binding CloseCommand}" Cursor="Hand" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}">
+
+                    <Button Width="35" Height="35" Style="{StaticResource ButtonSimp12}"  Command="{Binding CloseCommand}" Cursor="Hand" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}">
                             <iconPacks:PackIconMaterial Style="{StaticResource IconStyle}" Margin="0" Kind="Close"/>
                         </Button>
-                    </Border>
+                   
                 </Grid>
                 <Grid Height="35" Width="35" HorizontalAlignment="Center" Margin="0,-35,0,0">
-                    <Border Style="{StaticResource BorderButtonStyle}">
-                        <Button Style="{StaticResource ButtonSimp1}" Background="Transparent" Command="{Binding MinimizeCommand}" Cursor="Hand" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" >
+                        <Button Width="35" Height="35" Style="{StaticResource ButtonSimp12}" Command="{Binding MinimizeCommand}" Cursor="Hand" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" >
                             <iconPacks:PackIconMaterial Style="{StaticResource IconStyle}" Margin="0" Kind="WindowMinimize"/>
                         </Button>
-                    </Border>
                 </Grid>
             </StackPanel>
             <StackPanel Margin="10 0 0 0" Grid.Row="1" VerticalAlignment="Center">
@@ -64,6 +62,7 @@
                              Height="50"
                              Style="{StaticResource Radiobtn}"
                              IsChecked="True"
+                             Command="{Binding MainMenuCommand}"
                     >
                     <Grid HorizontalAlignment="Left" Width="250">
                     <iconPacks:PackIconMaterial Kind="WindowShutter"  Style="{StaticResource ImageStyle}"/>
