--- a/MyLinx/MyLinx/View/Scripts.xaml
+++ b/MyLinx/MyLinx/View/Scripts.xaml
@@ -1,14 +1,76 @@
-﻿<Page x:Class="MyLinx.View.Scripts"
+﻿<UserControl x:Class="MyLinx.View.Scripts"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:MyLinx.View"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="Scripts">
+      mc:Ignorable="d"
+      xmlns:m="clr-namespace:MyLinx.Model"
+      xmlns:vm ="clr-namespace:MyLinx.ViewModel"
+      d:DesignHeight="680" d:DesignWidth="810"
+      Style="{StaticResource PageStyle}"
+      >
+
+    <UserControl.DataContext>
+        <vm:ScriptsVM/>
+    </UserControl.DataContext>
+
+            <UserControl.Resources>
+        <m:TextToVisibilityConverter x:Key="TextToVisibilityConverter"/>
+    </UserControl.Resources>
+
 
     <Grid>
-        
+        <Border CornerRadius="0 20 20 0" Background="{StaticResource Dark_Reseda}">
+            <Grid Margin="0 25 0 0" >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="70"/>
+                    <RowDefinition Height="3*"/>
+                </Grid.RowDefinitions>
+
+                <Grid Grid.Row="0" Width="350" Height="45" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="20 0 0 0">
+                    <TextBox Width="260" HorizontalAlignment="Left" Style="{StaticResource SearchBoxStyle}" 
+                             Text="{Binding SearchText}" x:Name="SearchTxtBox" />
+                    <TextBlock Width="260" HorizontalAlignment="Left" Style="{StaticResource RegistrationTextBoxes}" Text ="Поиск... "  IsHitTestVisible="False">
+                        <TextBlock.Visibility>
+                            <MultiBinding Converter="{StaticResource TextToVisibilityConverter}">
+                                <Binding ElementName="SearchTxtBox" Path="IsFocused"/>
+                                <Binding ElementName="SearchTxtBox" Path="Text"/>
+                            </MultiBinding>
+                        </TextBlock.Visibility>
+                    </TextBlock>
+                    <Button Width="45" Height="45" HorizontalAlignment="Right" Margin="0 0 45 0" Style="{StaticResource ButtonSort}" Background="{StaticResource Darker_Reseda}" Cursor="Hand">
+                        <iconPacks:PackIconMaterial Style="{StaticResource IconStyle}" Kind="Sort" />
+                    </Button>
+                    <Button Width="45" Height="45" HorizontalAlignment="Right" Style="{StaticResource ButtonSearch}" Background="{StaticResource Darker_Reseda}" Cursor="Hand">
+                        <iconPacks:PackIconMaterial Style="{StaticResource IconStyle}" Kind="Magnify"/>
+                    </Button>
+                </Grid>
+                <Grid Grid.Row="0" Width="200" VerticalAlignment="Center" HorizontalAlignment="Right" Height="60" Margin="0 0 10 0">
+                    <Button Style="{StaticResource ButtonSimp12}" Height="60" Width="200" >
+                        <TextBlock Text="Добавить" Style="{StaticResource TextStyleText}"/>
+                    </Button>
+                </Grid>
+
+                <ScrollViewer Grid.Row="1" 
+                              HorizontalScrollBarVisibility="Disabled" 
+                              VerticalScrollBarVisibility="Hidden" 
+                              VerticalAlignment="Stretch">
+                    <ItemsControl ItemsSource="{Binding MacroItems}">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <Border Margin="10" Padding="10" Background="{StaticResource Roze}" CornerRadius="10">
+                                    <StackPanel>
+                                        <TextBlock Text="{Binding Title}" FontWeight="Bold" FontSize="16"/>
+                                        <TextBlock Text="{Binding Description}" FontSize="12" Foreground="Gray"/>
+                                    </StackPanel>
+                                </Border>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </ScrollViewer>
+            </Grid>
+        </Border>
     </Grid>
-</Page>
+</UserControl>
