--- a/MyLinx/MyLinx/View/Styles/Button.xaml
+++ b/MyLinx/MyLinx/View/Styles/Button.xaml
@@ -120,6 +120,35 @@
                     <Storyboard>
                         <ColorAnimation 
                         Storyboard.TargetProperty="(Background).(SolidColorBrush.Color)" 
+                        From="#64554B" 
+                        To="#64454B" 
+                        Duration="0:0:0.1" />
+                    </Storyboard>
+                </BeginStoryboard>
+            </EventTrigger>
+            <EventTrigger RoutedEvent="MouseLeave">
+                <BeginStoryboard>
+                    <Storyboard>
+                        <ColorAnimation 
+                        Storyboard.TargetProperty="(Background).(SolidColorBrush.Color)" 
+                        From="#64454B" 
+                        To="#64554B" 
+                        Duration="0:0:0.1" />
+                    </Storyboard>
+                </BeginStoryboard>
+            </EventTrigger>
+        </Style.Triggers>
+    </Style>
+    <Style x:Key="BorderButtonStyle1" TargetType="Border">
+        <Setter Property="Background" Value="{StaticResource Dark_Reseda}" />
+        <Setter Property="CornerRadius" Value="8" />
+        
+        <Style.Triggers>
+            <EventTrigger RoutedEvent="MouseEnter">
+                <BeginStoryboard>
+                    <Storyboard>
+                        <ColorAnimation 
+                        Storyboard.TargetProperty="(Background).(SolidColorBrush.Color)" 
                         From="#64644B" 
                         To="#64554B" 
                         Duration="0:0:0.1" />
@@ -217,7 +246,7 @@
     </Style>
 
     <Style x:Key="ButtonSimp" TargetType="Button">
-        <Setter Property="Background" Value="{StaticResource Reseda}" />
+        <Setter Property="Background" Value="{StaticResource Darker_Reseda}" />
         <Setter Property="BorderThickness" Value="0" />
         <Setter Property="Padding" Value="10" />
         <Setter Property="HorizontalAlignment" Value="Center" />
@@ -271,6 +300,37 @@
                         </Trigger>
                         <Trigger Property="IsPressed" Value="True">
                             <Setter TargetName="buttonBorder" Property="Background" Value="#64504B" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
+    <Style x:Key="ButtonSimp12" TargetType="Button">
+        <Setter Property="Background" Value="{StaticResource Darker_Reseda}" />
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="Padding" Value="10" />
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="FontFamily" Value="/View/Fonts/#Comic Sans MS" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="Foreground" Value="{StaticResource Sage}" />
+        <Setter Property="FontSize" Value="18" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="FontSize" Value="16" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border x:Name="buttonBorder" Background="{TemplateBinding Background}" CornerRadius="8">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="buttonBorder" Property="Background" Value="#64454B" />
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter TargetName="buttonBorder" Property="Background" Value="#64404B" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
